Fix run model spinner on safari

--- a/App/src/pages/editScenario/editScenario.scss
+++ b/App/src/pages/editScenario/editScenario.scss
@@ -110,8 +110,13 @@
 
 }
 
+#runModel {
+  position: relative;
+}
+
 .runModelSpinner {
   position: absolute;
+  top: 6px;
   right: 10px;
   .bx--loading__background {
     stroke: $brand;
